--- a/app/src/main/res/layout/item_mine_favorite_songlist.xml
+++ b/app/src/main/res/layout/item_mine_favorite_songlist.xml
@@ -24,9 +24,16 @@
         android:scaleType="fitCenter"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
-    <androidx.recyclerview.widget.RecyclerView
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/favoriteRecycler"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintVertical_weight="1"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/favoriteListNum"/>-->
+    <com.franz.easymusicplayer.adapter.NoSlideRecyclerView
         android:id="@+id/favoriteRecycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/favoriteListNum"/>
+        app:layout_constraintVertical_weight="1"
+        app:layout_constraintTop_toBottomOf="@id/favoriteListNum" />
 </androidx.constraintlayout.widget.ConstraintLayout>
